syntax = 'proto3';

package identity;

import "google/protobuf/timestamp.proto";

message RpcContactQuery {
  optional string id = 1;
  repeated string ids = 2;
  optional string name = 3;
  optional bool isPrimary = 4;
  optional bool isVisible = 5;
}

message RpcContactRequest {
  RpcContactQuery query = 1;
}

message RpcContact {
  string _id = 1;
  optional string link = 2;
  string name = 3;
  string value = 4;
  string type = 5;
  bool isPrimary = 6;
  bool isVisible = 7;
  google.protobuf.Timestamp createdAt = 8;
  optional google.protobuf.Timestamp updatedAt = 9;
}

message RpcContactList {
  repeated RpcContact items = 1;
}

service ContactService {
  rpc getMany (RpcContactRequest) returns (RpcContactList) {}
}
